Fix visibility on popup

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -537,7 +537,7 @@ a.nav-link:hover {
 
 /* Confirmation popup on form page */
 #confirm {
-  /* display: none; */
+  display: none;
   background-color: #0a3170;
   color: white;
   border: 1px solid #e9ecef;
@@ -609,7 +609,7 @@ a.nav-link:hover {
   }
 
   #confirm {
-    /* display: none; */
+    display: none;
     width: 100%;
     height: 100%;
     left: 0;
